@@ -228,6 +228,7 @@
 <ul>
 <li><a href="https://guangchuangyu.github.io/2015/06/dotplot-for-enrichment-result">dotplot for enrichment result</a></li>
 <li><a href="https://guangchuangyu.github.io/2014/08/enrichment-map">enrichment map</a></li>
+<li><a href="https://guangchuangyu.github.io/2016/11/showcategory-parameter-for-visualizing-comparecluster-output/">showCategory parameter for visualizing compareCluster output</a></li>
 </ul>
 <p><i class="fa fa-hand-o-right"></i> Find out more on <a href="https://guangchuangyu.github.io/tags/dose">https://guangchuangyu.github.io/tags/dose</a>.</p></div>
         </div>
