@@ -217,9 +217,9 @@
 <!-- AddToAny END -->
 
 <p><link rel="stylesheet" href="https://guangchuangyu.github.io/css/font-awesome.min.css"></p>
-<p><a href="https://bioconductor.org/packages/DOSE"><img alt="releaseVersion" src="https://img.shields.io/badge/release%20version-3.0.0-blue.svg?style=flat" /></a>
-<a href="https://github.com/GuangchuangYu/DOSE"><img alt="develVersion" src="https://img.shields.io/badge/devel%20version-3.1.0-blue.svg?style=flat" /></a>
-<a href="https://bioconductor.org/packages/stats/bioc/DOSE"><img alt="total" src="https://img.shields.io/badge/downloads-47563/total-blue.svg?style=flat" /></a>
+<p><a href="https://bioconductor.org/packages/DOSE"><img alt="releaseVersion" src="https://img.shields.io/badge/release%20version-3.0.1-blue.svg?style=flat" /></a>
+<a href="https://github.com/GuangchuangYu/DOSE"><img alt="develVersion" src="https://img.shields.io/badge/devel%20version-3.1.1-blue.svg?style=flat" /></a>
+<a href="https://bioconductor.org/packages/stats/bioc/DOSE"><img alt="total" src="https://img.shields.io/badge/downloads-48275/total-blue.svg?style=flat" /></a>
 <a href="https://bioconductor.org/packages/stats/bioc/DOSE"><img alt="month" src="https://img.shields.io/badge/downloads-2034/month-blue.svg?style=flat" /></a></p>
 <p>This package implements five methods proposed by <em>Resnik</em>, <em>Schlicker</em>, <em>Jiang</em>, <em>Lin</em> and <em>Wang</em> respectively for measuring semantic similarities among DO terms and gene products. Enrichment analyses including hypergeometric model and gene set enrichment analysis are also implemented for discovering disease associations of high-throughput biological data.</p>
 <p><code>DOSE</code> is released within the <a href="https://bioconductor.org/packages/DOSE">Bioconductor</a> project and the source code is hosted in <a href="https://github.com/GuangchuangYu/DOSE"><i class="fa fa-github fa-lg"></i> GitHub</a>.</p>
@@ -229,7 +229,7 @@
 <p>Please cite the following article when using <code>DOSE</code>:</p>
 <p><a href="http://dx.doi.org/10.1093/bioinformatics/btu684"><img alt="doi" src="https://img.shields.io/badge/doi-10.1093/bioinformatics/btu684-blue.svg?style=flat" /></a>
 <a href="https://scholar.google.com.hk/scholar?oi=bibs&amp;hl=en&amp;cites=16627502277303919270"><img alt="citation" src="https://img.shields.io/badge/cited%20by-19-blue.svg?style=flat" /></a>
-<a href="https://www.altmetric.com/details/2788597"><img alt="Altmetric" src="https://img.shields.io/badge/Altmetric-27-blue.svg?style=flat" /></a></p>
+<a href="https://www.altmetric.com/details/2788597"><img alt="Altmetric" src="https://img.shields.io/badge/Altmetric-36-blue.svg?style=flat" /></a></p>
 <p><strong>Yu G</strong>, Wang L, Yan G and He QY<sup>*</sup>. DOSE: an R/Bioconductor package for Disease Ontology Semantic and Enrichment analysis. <strong>Bioinformatics</strong>, 2015, 31(4):608-609.</p>
 <h2 id="featured-articles"><i class="fa fa-pencil"></i> Featured Articles</h2>
 <p><img src="https://guangchuangyu.github.io/featured_img/DOSE/c5mb00663e-f1_hi-res.gif" width="500"></p>
