@@ -38,10 +38,10 @@ Let us know if you have published using `DOSE` and your publication will be feat
   }  
   </style>
 
-<div id = 'chart6d53de9646' class = 'rChart morris'></div>
+<div id = 'chart2ab922fdf05d' class = 'rChart morris'></div>
 <script type='text/javascript'>
     var chartParams = {
- "element": "chart6d53de9646",
+ "element": "chart2ab922fdf05d",
 "width":            800,
 "height":            400,
 "xkey": "year",
@@ -60,7 +60,7 @@ Let us know if you have published using `DOSE` and your publication will be feat
 "pubid": "Ug5p-4gJ2f0C" 
 } 
 ],
-"id": "chart6d53de9646",
+"id": "chart2ab922fdf05d",
 "labels": "cites" 
 },
       chartType = "Bar"
